--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
 }
 
 body {
@@ -26,7 +26,7 @@ a {
 }
 
 .heading {
-  /* text-align: center; */
+  text-align: center;
   margin: 0% 0 2vh 0;
 }
 
