--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   /* padding: 0; */
+  /* box-sizing: border-box; */
 }
 
 body {
@@ -78,7 +79,7 @@ input {
 
 input:focus {
   outline: none;
-  border: 2px solid #0c88bd;
+  border: 1px solid #0c88bd;
 }
 
 .remember {
@@ -90,12 +91,14 @@ input:focus {
   display: flex;
   justify-content: space-between;
   padding: 2% 0% 8% 0;
+  font-size: 12px;
 }
 
 button {
   width: 100%;
   height: 50px;
   color: white;
+  font-size: 16px;
   background-color: #0c88bd;
   border: 1px solid #0c88bd;
   border-radius: 8px;
