--- a/css/login.css
+++ b/css/login.css
@@ -113,3 +113,13 @@ button:focus {
 button:active {
   transform: scale(1.05);
 }
+
+.error {
+  position: absolute;
+  bottom: 5%;
+  width: 376px;
+  height: 10%;
+  color: red;
+  font-size: 12px;
+  padding: 0% 0 5% 0;
+}
